--- a/front.html
+++ b/front.html
@@ -7,7 +7,7 @@
 </head>
 
 <body style="margin: 0; padding: 0;">
-    <iframe id="ifr" frameborder="0" style="height: 100vh; width: 100vw; margin: 0; padding: 0;" src="http://129.21.124.76:8080/inside" title="wall display"></iframe>
+    <iframe id="ifr" frameborder="0" style="height: 100vh; width: 100vw; margin: 0; padding: 0;" src="http://localhost:8080/inside" title="wall display"></iframe>
 </body>
 
 </html>
